feat: Add profile component with user details, password change functionality, and associated styles and tests

--- a/src/app/pages/customer/components/customer-dashboard/customer-dashboard.component.html
+++ b/src/app/pages/customer/components/customer-dashboard/customer-dashboard.component.html
@@ -6,7 +6,7 @@
         <h2 class="user-name">{{ userName() }}</h2>
       </div>
     </ion-title>
-    <ion-avatar slot="end" routerLink="/profile" class="avatar-btn">
+    <ion-avatar slot="end" routerLink="/customer/profile" class="avatar-btn">
       <img src="assets/icon/BANK.jpg" alt="Avatar" />
     </ion-avatar>
   </ion-toolbar>
